# redmax

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  NOTICE.txt  README.md  main.py  pyproject.toml  setup.py
.github/workflows/: ci.yaml  conda-build.yaml  release.yaml
conda/: channeldata.json  index.html
conda-recipe/: conda-lock.yml  environment.yaml  linux_64_.yaml  meta.yaml  osx_64_.yaml  osx_arm64_.yaml
conda/linux-64/: current_repodata.json  current_repodata.json.bz2  index.html  redmax-0.2.0-py310h1a2810e_0.conda  redmax-0.2.0-py311h1a2810e_0.conda  redmax-0.2.0-py312h1a2810e_0.conda  redmax-0.2.0-py39h1a2810e_0.conda  repodata.json  repodata.json.bz2
conda/linux-64/.cache/: cache.db
conda/noarch/: index.html
conda/noarch/.cache/: cache.db
conda/osx-arm64/: current_repodata.json  current_repodata.json.bz2  index.html  redmax-0.2.0-py310h75f9c73_0.conda  redmax-0.2.0-py311h75f9c73_0.conda  redmax-0.2.0-py312h75f9c73_0.conda  redmax-0.2.0-py39h75f9c73_0.conda  repodata.json  repodata_from_packages.json.bz2
conda/osx-arm64/.cache/: cache.db
redmax/: CMakeLists.txt  Common.h  Mesh.cpp  Mesh.h  python_interface.cpp
redmax/BVH/: AABBTree.h  BVHEngine.cpp  BVHEngine.h
